# sphinxsearch-for-pelican

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg  sphinxsearch.py
pelican/plugins/sphinxsearch/: __init__.py  sphinxsearch.py
site_files/: search.php  search_box.css  search_box.html
