[metadata]
name = pelican-sphinxsearch
version = attr: pelican.plugins.sphinxsearch.__version__
description = A Pelican plugin to provide a support of Sphinxsearch tool, allowing users to search keywords on the texts proposed on a website generated with Pelican (a static site generator written in Python).
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
author_email = ysard@users.noreply.github.com
url = https://github.com/ysard/sphinxsearch-for-pelican

license_files = LICENSE
keywords = pelican, sphinxsearch, search index
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
zip_safe = False
include_package_data = True
packages = pelican.plugins.sphinxsearch
install_requires =
    beautifulsoup4

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest>=5.2.0
    pytest-runner
    zest.releaser[recommended]

[zest.releaser]
create-wheel = no
python-file-with-version = pelican.plugins.sphinxsearch.__init__.py

[aliases]
test=pytest
